gccida/g1/verify_flow_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2112:4: error: expected ';' after expression
rtx x; // [rsp+10h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2112:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+10h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2118:1: error: use of undeclared identifier 'x'
x = get_insns( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2120:17: error: expected identifier or '('
 struct bb_info = ( basic_block *)xcalloc( max_uid, 8uLL); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2134:91: error: expected ')'
for ( j = *(  struct rtx_def **)( v6 + 8); j != last_insn && last_insn; last_insn = ( rtx)last_insn[1] ) 
                                                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2134:5: note: to match this '('
for ( j = *(  struct rtx_def **)( v6 + 8); j != last_insn && last_insn; last_insn = ( rtx)last_insn[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2154:19: error: expected ';' after expression
last_insn = ( rtx)last_insn[1]; 
                  ^
                  ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2216:53: error: too many arguments provided to function-like macro invocation
fatal_insn( "wrong insn in the fallthru edge", rtx, "cfgrtl.c", 1717, "verify_flow_info"); 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2216:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "wrong insn in the fallthru edge", rtx, "cfgrtl.c", 1717, "verify_flow_info"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2274:13: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct edge_def *')
v3[v18 + 2] -= m; 
~~~~~~~~~~~ ^  ~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2312:67: error: invalid operands to binary expression ('struct rtx_def' and 'long long')
if ( *( _WORD *)v14 != 37 || v14[2].fld[0].rtint != -80 || v14[2] != v15 ) 
                                                           ~~~~~~ ^  ~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2348:60: error: too many arguments provided to function-like macro invocation
fatal_insn( "flow control insn inside a basic block", v21, "cfgrtl.c", 1829, "verify_flow_info"); 
                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2348:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "flow control insn inside a basic block", v21, "cfgrtl.c", 1829, "verify_flow_info"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2361:13: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'edge' (aka 'struct edge_def *'))
v3[v25 + 2] -= ii; 
~~~~~~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2377:6: error: use of undeclared identifier 'x'
if ( x ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2385:18: error: use of undeclared identifier 'x'
v29 = *( _WORD *)x; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2386:17: error: use of undeclared identifier 'x'
if ( *( _WORD *)x == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2388:6: error: use of undeclared identifier 'x'
if ( x[2].fld[0].rtint == -80 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2391:33: error: use of undeclared identifier 'x'
if ( *( _DWORD *)( *( _QWORD *)&x[2] + 88LL) != ++v28 ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/cfgrtl.c:2396:15: error: use of undeclared identifier 'x'
if ( !bb_info[x->fld[0].rtint] ) 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_flow_info/src/obj/cfgrtl.o] Error 1
